--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
   },
   "optionalDependencies": {
     "@tensorflow/tfjs-node": "^2.8.6",
+    "dmg-license": "^1.0.11",
     "electron": "^21.3.1",
     "electron-builder": "^23.6.0",
     "electron-updater": "^4.6.1"
